full images and spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ textarea {
     font-weight: 400;
     color: #fff;
     letter-spacing: 0;
-    padding: 27px 36px;
+    padding: 25px 36px;
     position: relative;
     padding-left: 0;
 }
@@ -418,7 +418,7 @@ END Service Area
 
 .section-title {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 
 .section-title h2 {
